[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/ParallaxBackground.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/background/background.jpg" type="Texture" id=5]
[ext_resource path="res://scenes/UI/SceneChanger.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/UI/PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sprites/interface/game_interface.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/interface/title_wheel00.png" type="Texture" id=10]
[ext_resource path="res://scripts/SpriteRotation.gd" type="Script" id=11]
[ext_resource path="res://assets/fonts/game_mode.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/sprites/interface/empty_heart.png" type="Texture" id=13]
[ext_resource path="res://scripts/HeartsContainers.gd" type="Script" id=14]
[ext_resource path="res://assets/sound/Year-Round Absorbed Curiosity.ogg" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 12 )

[node name="Game" type="Node2D"]
position = Vector2( 92.4986, 12.6134 )
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 825.92, 407.964, 290.768 ],
"_edit_vertical_guides_": [ 490.297 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Menu" parent="CanvasLayer" instance=ExtResource( 8 )]
rect_min_size = Vector2( 20, 20 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="CanvasLayer/Menu"]
modulate = Color( 1, 1, 1, 0.431373 )
position = Vector2( 640.194, 373.895 )
scale = Vector2( 1.25231, 1.47274 )
texture = ExtResource( 9 )

[node name="Wheel" type="Sprite" parent="CanvasLayer/Menu"]
pause_mode = 1
modulate = Color( 1, 1, 1, 0.647059 )
position = Vector2( 502.199, 635.634 )
scale = Vector2( 0.403074, 0.403074 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 160.163, 22.9372, 708.887, 702.071 )
script = ExtResource( 11 )

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Menu"]
anchor_left = 0.651215
anchor_top = 0.00196311
anchor_right = 0.882465
anchor_bottom = 0.103392
margin_left = 14.0282
margin_top = -0.000175953
margin_right = 14.0282
margin_bottom = -0.000175476
custom_fonts/font = SubResource( 1 )
text = "Score"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score" type="Label" parent="CanvasLayer/Menu"]
anchor_left = 0.585909
anchor_top = 0.118277
anchor_right = 0.944659
anchor_bottom = 0.20542
margin_left = 14.2725
margin_top = 0.000305176
margin_right = 14.2725
margin_bottom = 0.000305176
custom_fonts/font = SubResource( 2 )
text = "000 000 000"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LifesLabel" type="Label" parent="CanvasLayer/Menu"]
anchor_left = 0.607762
anchor_top = 0.312082
anchor_right = 0.729012
anchor_bottom = 0.38494
custom_fonts/font = SubResource( 3 )
text = "Lifes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PowerLabel" type="Label" parent="CanvasLayer/Menu"]
anchor_left = 0.613098
anchor_top = 0.54647
anchor_right = 0.739348
anchor_bottom = 0.619327
custom_fonts/font = SubResource( 3 )
text = "Power"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Power" type="Label" parent="CanvasLayer/Menu"]
modulate = Color( 0.592157, 1, 0.258824, 1 )
anchor_left = 0.784483
anchor_top = 0.546093
anchor_right = 0.833233
anchor_bottom = 0.61895
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HeartsContainer" type="HBoxContainer" parent="CanvasLayer/Menu"]
anchor_left = 0.605945
anchor_top = 0.379642
anchor_right = 1.18844
anchor_bottom = 0.455356
margin_right = -360.0
margin_bottom = -36.0
rect_scale = Vector2( 3, 3 )
custom_constants/separation = 1
alignment = 1
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="1" type="TextureRect" parent="CanvasLayer/Menu/HeartsContainer"]
margin_left = 2.0
margin_right = 18.0
margin_bottom = 17.0
texture = ExtResource( 13 )

[node name="2" type="TextureRect" parent="CanvasLayer/Menu/HeartsContainer"]
margin_left = 19.0
margin_right = 35.0
margin_bottom = 17.0
texture = ExtResource( 13 )

[node name="3" type="TextureRect" parent="CanvasLayer/Menu/HeartsContainer"]
margin_left = 36.0
margin_right = 52.0
margin_bottom = 17.0
texture = ExtResource( 13 )

[node name="4" type="TextureRect" parent="CanvasLayer/Menu/HeartsContainer"]
margin_left = 53.0
margin_right = 69.0
margin_bottom = 17.0
texture = ExtResource( 13 )

[node name="5" type="TextureRect" parent="CanvasLayer/Menu/HeartsContainer"]
margin_left = 70.0
margin_right = 86.0
margin_bottom = 17.0
texture = ExtResource( 13 )

[node name="6" type="TextureRect" parent="CanvasLayer/Menu/HeartsContainer"]
margin_left = 87.0
margin_right = 103.0
margin_bottom = 17.0
texture = ExtResource( 13 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Control"]
anchor_left = -2.248
anchor_top = -0.139
anchor_right = 11.475
anchor_bottom = 17.15
margin_left = 26.8044
margin_top = 5.94968
margin_right = -92.1156
margin_bottom = -9.61035
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Control/ViewportContainer"]
arvr = true
size = Vector2( 430, 675 )
handle_input_locally = false
render_target_update_mode = 3

[node name="ParallaxBackground" type="ParallaxBackground" parent="Control/ViewportContainer/Viewport"]
script = ExtResource( 3 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Control/ViewportContainer/Viewport/ParallaxBackground"]
motion_mirroring = Vector2( 0, 826 )

[node name="Sprite" type="Sprite" parent="Control/ViewportContainer/Viewport/ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.556863, 0.556863, 0.556863, 1 )
position = Vector2( 207.701, 413.721 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 501.224, 827.941 )

[node name="Player" parent="Control/ViewportContainer/Viewport" instance=ExtResource( 2 )]
position = Vector2( 217.591, 500.301 )

[node name="SceneChanger" parent="." instance=ExtResource( 7 )]
layer = -1

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="Tween" type="Tween" parent="LevelMusic"]
[connection signal="game_over" from="Control/ViewportContainer/Viewport/Player" to="." method="_on_Player_game_over"]
[connection signal="player_hitted" from="Control/ViewportContainer/Viewport/Player" to="CanvasLayer/Menu/HeartsContainer" method="_on_Player_player_hitted"]
